# vaf

./: Cargo.toml  LICENSE.md  README.md  disk.py  embed.py  main.py  pyproject.toml  usage.py  vaf.pyi  vector_index.py
.github/workflows/: CI.yml
src/: distance.rs  filter.rs  indexing.rs  lib.rs  types.rs
vaf/: pyproject.toml
vaf/src/: lib.rs
